--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* -------- Global CSS ------------- */
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +6,7 @@
     list-style: none;
 }
 
-/* header section start here  */
+/*--------------- header section start here -------------------- */
 .header_container {
     margin: 3%;
     display: flex;
@@ -29,7 +30,7 @@
     color: #919191;
     margin: 70px;
 }
-/* ----------------end header part --------- */
+/* ---------------- end header part --------- */
 
 /*---------------- Banner Section start ---------------- */
 .banner_container {
@@ -39,4 +40,79 @@
 .banner_container img {
 width: 100%;
 }
+.banner_text{
+    margin: 50px;
+   
+}
+.banner_text h4{
+    color: #919191;
+    text-transform: uppercase;
+    margin: 30px;
+}
+.banner_text h1{
+    color: #626262;
+    margin: 30px;
+}
+.banner_text p{
+    margin: 30px ;
+    color: #c0c0c0;
+    text-align: justify;
+}
 /*------------- Banner section end here ----------------- */
+
+
+/* ------- life style container ------------------- */
+.lifestyle_container{
+    margin: 0 150px ;
+    display: flex;
+}
+.first_one{
+    width: 50%;
+    padding: 25px
+}
+.second_one{
+    width: 50%;
+    padding: 25px;
+}
+.lifestyle_text h4 {
+    color: #919191;
+    padding: 20px 0px;
+    text-transform: uppercase;
+}
+
+.lifestyle_text h1{
+    color: #626262;
+    padding: 20px 0px;
+}
+.lifestyle_text p{
+    color: #c0c0c0;
+    padding: 20px 0px;
+    text-align: justify;
+}
+/* --------- lifestyle end here ------------ */
+/* newsletter container start */
+.newsletter_container{
+    background-color: #f0f0f0;
+    height: 250px;
+}
+.newsletter_text{
+    text-align: center;
+    margin: 0 auto;
+    height: 50%;
+}
+.newsletter_text h2{
+    padding: 50px;
+}
+.form_box{
+    text-align: center;
+    height: 50%;
+}
+.form_box input{
+    margin: 17px 83px;
+    border-style: none;
+    background-color: #f0f0f0;
+}
+.new_div{
+    margin: 0 auto;
+    width: 28%;
+}
